using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Code
{
    public static class Helpers
    {
        public static string AnimationMoveSpeed = "MovementSpeed";
        public static string InCombat = "InCombat";
        public static string AttackTrigger = "attack";
    }
}
